syntax = "proto3";

option csharp_namespace = "pg.GrpcController.Admin.Sever";
package pg.GrpcController.Admin.Sever;

service SeverInfoService {
 

}


message CommonResponse
{ 
    int32 ErrorCode=1;
    string Msg=2; 
}

message GetLog_Request 
{ 
    string LogAdminToken=1;
    int32 MaxCount=2;
    int64 StartTime=3;
    int64 EndTime=4;
}

message GetLog_Response 
{ 
    int32 ErrorCode=1;
    string ErrorMessage=2;
    optional int32 MaxCount=3;
    optional int64 StartTime=4;
    optional int64 EndTime=5;
    repeated Log logs=6;
    message Log
    {
        int64 Id=1;//
        int64 Level=2;
        string Title=3;//
        string Msg=4;//
        int64 Time=5;//时间戳/1000 
    } 
}

